fix(Workflow): Fix pointing to notice md

--- a/.github/workflows/docker-hub-build.yml
+++ b/.github/workflows/docker-hub-build.yml
@@ -70,7 +70,7 @@ jobs:
         uses: peter-evans/dockerhub-description@v3
         with:
           # readme-filepath defaults to toplevel README.md, Only necessary if you have a dedicated file with your 'Notice for docker images'
-          # readme-filepath: path/to/dedicated/notice-for-docker-image.md
+          readme-filepath: DOCKER_NOTICE.md
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
           repository: ${{ env.IMAGE_NAMESPACE }}/${{ env.IMAGE_NAME }}
