fix(DockerFile): Fix trivy scan

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -68,15 +68,16 @@ jobs:
       # For public images, no ENV vars must be set.
       - name: Run Trivy vulnerability scanner
         if: always()
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           # Path to Docker image
           image-ref: "ghcr.io/catenax-ng/tx-vas-country-risk-backend:latest"
           format: "sarif"
           output: "trivy-results3.sarif"
-          exit-code: "1"
-          severity: "CRITICAL,HIGH"
-          timeout: "60m"
+          #          exit-code: "1"
+          #          severity: "CRITICAL,HIGH"
+          #          timeout: "60m"
+          vuln-type: "os,library"
 
       - name: Upload Trivy scan results to GitHub Security tab
         if: always()
