--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -71,7 +71,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.14.0
         with:
           # Path to Docker image
-          image-ref: "ghcr.io/catenax-ng/tx-vas-country-risk-backend:latest"
+          image-ref: "tractusx/vas-country-risk-backend:latest"
           format: "sarif"
           output: "trivy-results3.sarif"
           #          exit-code: "1"
