--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <liquibase.version>4.23.0</liquibase.version>
         <liquibase-hibernate5.version>4.22.0</liquibase-hibernate5.version>
         <spring-boot.version>3.1.7</spring-boot.version>
-        <org.zalando.problem-spring-web>0.27.0</org.zalando.problem-spring-web>
+        <org.zalando.problem-spring-web>0.26.0</org.zalando.problem-spring-web>
         <org.springdoc.springdoc-openapi-ui>2.1.0</org.springdoc.springdoc-openapi-ui>
         <org.springframework.cloud>4.0.4</org.springframework.cloud>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -72,7 +72,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>dash-licenses-snapshots</id>
-            <url>https://repo.eclipse.org/content/repositories/dash-licenses-snapshots/org/eclipse/dash/license-tool-plugin/</url>
+            <url>https://repo.eclipse.org/content/repositories/dash-licenses/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -324,7 +324,7 @@
             <plugin>
                 <groupId>org.eclipse.dash</groupId>
                 <artifactId>license-tool-plugin</artifactId>
-                <version>1.1.1-SNAPSHOT</version>
+                <version>1.0.2</version>
                 <executions>
                     <execution>
                         <id>license-check</id>
@@ -333,6 +333,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <projectId>automotive.tractusx</projectId>
+                    <summary>DEPENDENCIES</summary>
+                    <includeScope>test</includeScope>
+                </configuration>
             </plugin>
             <!--			<plugin>-->
             <!--				&lt;!&ndash;-->
